Added name of the application on Heroku

--- a/README.rdoc
+++ b/README.rdoc
@@ -33,6 +33,8 @@ Make sure you are in the directory that contains your Rails app, then create an 
  
  heroku create
 
+<b>Our application on Heroku called: ancient-scrubland-6137</b>
+
 You can verify that the remote was added to your project by running
 
  git config --list | grep heroku
